# metadata-extraction-deploy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  aws_login.sh  config.mk.example  pyproject.toml  ruff.toml
src/metadata_extraction_deploy/: Home.py  _shared.py  app.py  cli.py
src/metadata_extraction_deploy/pages/: 1_Deploy.py  2_Content_Testing.py
